syntax = "proto3";
package symphony.concentratedliquidity.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "symphony/accum/v1beta1/accum.proto";
import "symphony/concentratedliquidity/params.proto";
import "symphony/concentratedliquidity/v1beta1/position.proto";
import "symphony/concentratedliquidity/v1beta1/tick_info.proto";
import "symphony/concentratedliquidity/v1beta1/incentive_record.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/concentrated-liquidity/types/genesis";

// FullTick contains tick index and pool id along with other tick model
// information.
message FullTick {
  // pool id associated with the tick.
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  // tick's index.
  int64 tick_index = 2 [ (gogoproto.moretags) = "yaml:\"tick_index\"" ];
  // tick's info.
  TickInfo info = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"tick_info\""
  ];
}

// PoolData represents a serialized pool along with its ticks
// for genesis state.
message PoolData {
  // pool struct
  google.protobuf.Any pool = 1 [ (cosmos_proto.accepts_interface) = "PoolI" ];
  // pool's ticks
  repeated FullTick ticks = 2
      [ (gogoproto.moretags) = "yaml:\"ticks\"", (gogoproto.nullable) = false ];
  AccumObject spread_reward_accumulator = 3 [
    (gogoproto.moretags) = "yaml:\"spread_reward_accumulator\"",
    (gogoproto.nullable) = false
  ];
  repeated AccumObject incentives_accumulators = 4 [
    (gogoproto.moretags) = "yaml:\"incentives_accumulator\"",
    (gogoproto.nullable) = false
  ];
  // incentive records to be set
  repeated IncentiveRecord incentive_records = 5
      [ (gogoproto.nullable) = false ];
}

message PositionData {
  Position position = 1;
  uint64 lock_id = 2 [ (gogoproto.moretags) = "yaml:\"lock_id\"" ];
  symphony.accum.v1beta1.Record spread_reward_accum_record = 3
      [ (gogoproto.nullable) = false ];
  repeated symphony.accum.v1beta1.Record uptime_accum_records = 4
      [ (gogoproto.nullable) = false ];
}

// GenesisState defines the concentrated liquidity module's genesis state.
message GenesisState {
  // params are all the parameters of the module
  Params params = 1 [ (gogoproto.nullable) = false ];
  // pool data containing serialized pool struct and ticks.
  repeated PoolData pool_data = 2 [ (gogoproto.nullable) = false ];

  repeated PositionData position_data = 3 [ (gogoproto.nullable) = false ];

  uint64 next_position_id = 4
      [ (gogoproto.moretags) = "yaml:\"next_position_id\"" ];

  uint64 next_incentive_record_id = 5
      [ (gogoproto.moretags) = "yaml:\"next_incentive_record_id\"" ];

  uint64 incentives_accumulator_pool_id_migration_threshold = 6
      [ (gogoproto.moretags) =
            "yaml:\"incentives_accumulator_pool_id_migration_threshold\"" ];
  uint64 spread_factor_pool_id_migration_threshold = 7
      [ (gogoproto.moretags) =
            "yaml:\"spread_factor_pool_id_migration_threshold\"" ];
}

message AccumObject {
  // In original struct of Accum object, store.KVStore is stored together.
  // For handling genesis, we do not need to include store.KVStore since we use
  // CL module's KVStore.

  // Accumulator's name (pulled from AccumulatorContent)
  string name = 1 [ (gogoproto.moretags) = "yaml:\"name\"" ];

  symphony.accum.v1beta1.AccumulatorContent accum_content = 2;
}
